# ffpopen

./: LICENSE  README.md  ffp-open.desktop  ffpopen.desktop  pyproject.toml
ffpopen/: __init__.py  __main__.py
