[project]
name = "ffpopen"
description = "Link opener for Firefox multi-profile users"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "tkinter"
]

[project.scripts]
ffpopen = "ffpopen:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ffpopen",
]
